bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:3: error: not found: value ||
  if (aSmile==true && bSmile==true) || (aSmile==false && bSmile==false){
                                    ^